# spectrogram

./: .clang-format  .gitmodules  CMakeLists.txt
cmake/: copy_runtime_deps.cmake  find_qt_root.cmake
cmake/packaging/: Linux.cmake  Windows.cmake
src/: CMakeLists.txt  main.cpp  utils.h
src/audio/: audiodevices.cpp  audiodevices.h  audiofilereader.cpp  audiofilereader.h  audioguard.h  audiotrack.cpp  audiotrack.h
src/controllers/: appcontroller.cpp  appcontroller.h  audiocontroller.cpp  audiocontroller.h  maincontroller.cpp  maincontroller.h  settingscontroller.cpp  settingscontroller.h  trackcontroller.cpp  trackcontroller.h
src/dsp/: fftanalyser.cpp  fftanalyser.h  windowfunctions.cpp  windowfunctions.h  windowfunctions_defs.h
src/spectrogram/: scaletransform.cpp  scaletransform.h  spectrumdata.cpp  spectrumdata.h  transformcache.cpp  transformcache.h
src/widgets/: bgfxwidget.cpp  bgfxwidget.h
src/widgets/layout/: boxlayout.cpp  boxlayout.h  layoutitem.cpp  layoutitem.h  viewlayout.cpp  viewlayout.h
src/widgets/views/: spectrogram.cpp  spectrogram.h  view.cpp  view.h
src/windows/: appwindow.cpp  appwindow.h  settings.ui  settingswindow.cpp  settingswindow.h
src/windows/ui/: app.ui  settings.ui
